--- a/styles/auth.scss
+++ b/styles/auth.scss
@@ -3,11 +3,13 @@
   height: 100vh;
   display: flex;
   align-items: center;
+  justify-content: center;
   flex-direction: column;
   gap: 40px;
   transition: 0.2s;
   position: relative;
-  background-color: transparent;
+  background-color: var(--primary);
+  color: var(--secondary);
   h1 {
     margin-top: 20px;
     font-size: 3rem;
@@ -21,6 +23,7 @@
       padding: 40px 20px;
       border-radius: 5px;
       background-color: rgba(0, 0, 0, 0.185);
+      box-shadow: 0 0 1000px rgba(255, 255, 255, 0.11);
       h1 {
         text-align: center;
         text-transform: capitalize;
@@ -55,6 +58,11 @@
         background-color: var(--primary);
         color: var(--secondary);
         cursor: pointer;
+        transition: 0.3s;
+        &:hover {
+          background-color: var(--secondary);
+          color: var(--primary);
+        }
       }
     }
   }
