--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -7,6 +7,7 @@
 @import "@/styles/form/allform.scss";
 @import "@/styles/home.scss";
 @import "@/styles/component.scss";
+@import "@/styles/mobile/media.scss";
 
 :root {
   --dark-bg: rgb(240, 240, 240);
@@ -15,10 +16,10 @@
   --primary-fade: #000934c4;
   --primary-shade: #00072c49;
   --secondary: rgb(250, 253, 255);
-  --success: #4BB543;
+  --success: #4bb543;
   --success-light: #4bb543be;
   --error-light: #ff9494a4;
-  --error: #FF9494;
+  --error: #ff9494;
   --warning: #fdcc18;
   --warning-light: #fdcb18ce;
   --info: #9bcffd;
@@ -37,6 +38,12 @@ input[type="number"]::-webkit-outer-spin-button {
   -webkit-appearance: none;
 }
 
+@media (max-width: 1000px) {
+  .body {
+    background-color: #4bb543;
+  }
+}
+
 body {
   color: var(--primary);
   background-color: var(--dark-bg);
@@ -44,6 +51,8 @@ body {
 .body {
   background-color: var(--dark-bg);
   display: flex;
+  position: relative;
+  //this is the main menu for the page routing things placed in this section
   .menu-container {
     color: var(--secondary);
     background-color: var(--primary);
@@ -52,7 +61,9 @@ body {
     top: 0;
     width: 20%;
     overflow: hidden;
+    overflow-y: auto;
     transition: 0.3s;
+    z-index: 2000;
     .menu-body {
       display: flex;
       flex-direction: column;
@@ -136,6 +147,15 @@ body {
   .menuactive {
     width: 0%;
   }
+  @media screen and (max-width: 1000px) {
+    .menu-container {
+      position: absolute;
+      width: 0;
+    }
+    .menuactive {
+      width: 200px;
+    }
+  }
   .body-container {
     display: flex;
     flex-direction: column;
@@ -147,8 +167,7 @@ body {
       background-color: var(--secondary);
       box-shadow: 0 0 20px var(--primary-shade);
       position: sticky;
-      top: 10px;
-      border-radius: 10px;
+      top: 0;
       background-color: #00000000;
       backdrop-filter: blur(50px);
       z-index: 1000;
