--- a/styles/mainpage/rootmain.scss
+++ b/styles/mainpage/rootmain.scss
@@ -400,6 +400,14 @@
   justify-content: center;
   align-items: center;
   gap: 10px;
+  p {
+    .nxt {
+      background-color: var(--success);
+      padding: 4px 10px;
+      font-size: 17px;
+      border-radius: 10px;
+    }
+  }
   span {
     font-size: 20px;
   }
